<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
              android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="20dp">

    <TextView
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enjoy"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_rate"
            android:backgroundTint="@color/green"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/rate"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_later"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/later"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_do_not_show"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/donotshow"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>