<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
              android:background="@android:color/white"
             android:padding="20dp">

    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:inputType="text|textCapSentences" />
    <EditText
        android:id="@+id/input_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notes_dialog_hint"
        android:inputType="text|textCapSentences" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--<Spinner-->
        <!--android:id="@+id/spinner_category"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_margin="10dp"-->
        <!--android:layout_weight="4"/>-->
        <org.angmarch.views.NiceSpinner
            android:id="@+id/spinner_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"/>

    </LinearLayout>
    <EditText
        android:visibility="gone"
        android:id="@+id/input_new_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_category_hint"
        android:inputType="text" />
</LinearLayout>