<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.FirstActivity">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/stoku_circle"/>
        <TextView
            android:id="@+id/stoku_welcome_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/stoku_welcome_message"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/lang"/>
        <org.angmarch.views.NiceSpinner
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/spinner_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_marginTop="10dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/curr"/>
        <org.angmarch.views.NiceSpinner
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/spinner_curr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_start"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <FrameLayout
            android:id="@+id/view_loading"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.airbnb.lottie.LottieAnimationView
                android:layout_gravity="center"
                android:id="@+id/loadingView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:lottie_fileName="simple_loader.json"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"/>
            <TextView
                android:gravity="center"
                android:layout_marginBottom="15dp"
                android:text="@string/ready_stoku"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </FrameLayout>
    </LinearLayout>
</ScrollView>