<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.AddEditItemActivity">

        <FrameLayout
            android:id="@+id/view_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <EditText
                android:id="@+id/edt_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@android:color/transparent"
                android:hint="Masukkan nama barang..."

                android:inputType="text|textCapSentences"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:theme="@style/AppTheme.ItemEditText"
                />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/category"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--<Spinner-->
                <!--android:id="@+id/spinner_category"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_margin="10dp"-->
                <!--android:layout_weight="4"/>-->
            <org.angmarch.views.NiceSpinner
                android:id="@+id/spinner_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="4"/>

            <ImageView
                android:id="@+id/btn_add_category"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_edit"/>
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/notes"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/edt_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textCapSentences"
            android:hint="@string/notes_hint"/>
    </LinearLayout>

    <TextView
        android:id="@+id/btn_delete"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:text="@string/delete_item_title"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</FrameLayout>