<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  tools:context=".fragment.StockFragment"
                  android:layout_marginTop="?android:actionBarSize"
                  android:background="@android:color/white"
                  android:orientation="vertical">

        <LinearLayout
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_margin="10dp"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/transparent"
                    android:id="@+id/edt_item_name"
                    android:drawablePadding="10dp"
                    android:inputType="textCapSentences"
                    android:padding="10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/add_item_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/btn_edit"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/btn_add"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_plus_gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="60dp">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>
    <FrameLayout
        android:layout_marginTop="?android:actionBarSize"
        android:id="@+id/view_empty"
        android:visibility="invisible"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:visibility="visible"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/stock_empty"
                android:layout_width="70dp"
                android:layout_height="70dp"/>
            <TextView
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/empty_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btn_add_now"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/add_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </FrameLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_shop"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:src="@drawable/ic_action_assignment"
        app:borderWidth="0dp"
        app:backgroundTint="@color/colorPrimary"
        android:layout_gravity="bottom|right"
        android:layout_margin="15dp"/>
    <TextView
        android:visibility="invisible"
        android:id="@+id/btn_add_to_cart"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="16dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:text="@string/add_to_list"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</FrameLayout>